<resources>
    <string name="app_name">Smart IS</string>

    <string-array name="English_Languages">
        <item>English</item>
        <item>Marathi</item>
    </string-array>

    <string-array name="Marathi_Language">
        <item>ईंग्रजी</item>
        <item>मराठी</item>
    </string-array>


    <string name="about_moisture_sensor1">The moisture of the soil plays an essential role in the irrigation field as well as in gardens for plants. As nutrients in the soil provide the food to the plants for their growth. Supplying water to the plants is also essential to change the temperature of the plants. The temperature of the plant can be changed with water using the method like transpiration. And plant root systems are also developed better when rising within moist soil. Extreme soil moisture levels can guide to anaerobic situations that can encourage the plant’s growth as well as soil pathogens. This article discusses an overview of the soil moisture sensor, working and it’s applications.</string>
    <string name="what_soil_sensor">The soil moisture sensor is one kind of sensor used to gauge the volumetric content of water within the soil. As the straight gravimetric dimension of soil moisture needs eliminating, drying, as well as sample weighting. These sensors measure the volumetric water content not directly with the help of some other rules of soil like dielectric constant, electrical resistance, otherwise interaction with neutrons, and replacement of the moisture content.</string>
    <string name="about_temperature_sensor">Temperature sensors are devices designed for measuring the degree of coolness and hotness in an object. The voltage across the diode determines the working of a temperature meter. The change of temperature varies directly proportional to the diode’s resistance. The cooler the temperature, the lesser the resistance will be and vice-versa. A measurement of the resistance across the diode is done, and the measurement is converted into units of temperature that are readable and displayed in numeric form over readout units. In the field of geotechnical monitoring, these temperature sensors are utilized in the measuring of internal temperatures of structures such as dams, bridges, power plants.</string>
    <string name="dashboard">DashBoard</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="today">Today</string>
    <string name="soil_sensor_intro">Soil moisture sensors measure the water content in the soil...</string>
    <string name="temperature_sensor_intro">A temperature sensor measures the temperature of its environment...</string>
    <string name="sensor_values">Sensor Values</string>
    <string name="your_sensor_value">Your Sensor Value</string>
    <string name="signal_state">Signal State</string>
    <string name="soil_moisture_sensor">Soil Moisture Sensor</string>
    <string name="why_soil_moisture_sensor">Why Soil Moisture Sensor</string>
    <string name="what_is_a_soil_moisture_sensor">What is a Soil Moisture Sensor?</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="what_do_temperature_sensor_do">What do Temperature Sensors do?</string>
    <string name="control_station">Control Station</string>
    <string name="hello">Hello!</string>
    <string name="user">User</string>
    <string name="control_your_motor_from_here">Control your motor from here</string>
    <string name="motor_speed">Motor Speed</string>
    <string name="motor_state">Motor State</string>
    <string name="working_time">Working Time</string>
    <string name="select_language">Select Language</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save_water">System will automatically water the plants when the soil moisture sensor detects an insufficient amount of moisture in the soil .</string>
    <string name="water_des">Our app is one step towards the conservation of water.</string>
    <string name="save_trees">This project has been designed for surveillance of irrigation systems in farms without the need for manual checking of irrigation systems.</string>
    <string name="trees_des">Automation in irrigation will help to reduce man power.</string>
    <string name="english">English</string>
    <string name="marathi">Marathi</string>
    <string name="selected_language_will_applied_to_the_whole_app">Selected language will applied to the whole app</string>
    <string name="weather_report">Weather Report</string>
    <string name="no_report">No weather report generated.</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="feels_like">Feels Like</string>
    <string name="current_weather_of">Current Weather Of</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="cloud_description">Cloud Description</string>
    <string name="meters_per_second">meters per second</string>
</resources>